--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ nixops = { git = "https://github.com/NixOS/nixops.git" }
 prettytable = "0.7.2"
 pluggy = "^0.13.1"
 # for nixops ;_;
-typeguard = "^2.7.1"
+typeguard = "2.7.1"
+PrettyTable = "0.7.2"
+jsonpickle = "1.4.1"
 typing-extensions = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
@@ -26,7 +28,7 @@ nose = "^1.3.7"
 coverage = "^5.2.1"
 flake8 = "^3.8.1"
 # For mypy txt report
-lxml = "^4.6.1"
+lxml = "^4.5.0"
 
 # docs
 livereload = "^2.6.1"
