--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "**" ]
   pull_request:
     branches: [ "**" ]
 jobs:
@@ -15,7 +15,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -34,7 +34,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -53,7 +53,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -72,7 +72,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -91,7 +91,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -110,7 +110,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -148,7 +148,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -165,7 +165,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
@@ -184,7 +184,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-20.09
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
