--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ flake8 = "^3.8.1"
 lxml = "^4.6.1"
 # for nixops ;_;
 typeguard = "2.9.1"
+typing-extensions = "^3.7.4"
+prettytable = "0.7.2"
+pluggy = "^0.13.1"
+jsonpickle = "1.4.1"
 
 # docs
 livereload = "^2.6.1"
