--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -250,8 +250,28 @@ jobs:
         run: 'nix-shell --run true'
       - name: Restructured Text Lint
         run: 'nix-shell --run "nix build .#checks.x86_64-linux.doc --experimental-features \"nix-command flakes\""'
+        # run: 'nix build .#checks.x86_64-linux.doc --experimental-features "nix-command flakes"'
       - name: build
         run: 'nix-build -A docs.x86_64-linux'
+  # docs:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Nix
+  #       uses: cachix/install-nix-action@v12
+  #       with:
+  #         nix_path: nixpkgs=channel:nixos-unstable
+  #     - uses: cachix/cachix-action@v8
+  #       with:
+  #         name: nixops-digitalocean
+  #         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+  #     - name: Prefetch shell.nix
+  #       run: 'nix-shell --run true'
+  #     - name: Restructured Text Lint
+  #       run: './ci/lint-docs.sh'
+
+
   poetry-up-to-date:
     strategy:
       fail-fast: false
