--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,33 @@ jobs:
         run: 'nix-shell --run true'
       - name: Black
         run: './ci/check-formatting.sh'
+  nixfmt:
+    strategy:
+      fail-fast: false
+      matrix:
+        nix_path: [
+            "nixpkgs=channel:nixos-unstable"
+          , "nixpkgs=channel:nixos-20.09"
+          , "nixpkgs=channel:nixos-20.03"
+        ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Nix
+        uses: cachix/install-nix-action@v12
+        with:
+          nix_path: ${{ matrix.nix_path }}
+      - uses: cachix/cachix-action@v8
+        with:
+          name: nixops-digitalocean
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - name: Prefetch shell.nix
+        run: 'nix-shell --run true'
+      - name: Nix Format
+        run: './ci/check-nix-formatting.sh'
   mypy:
     strategy:
       fail-fast: false
@@ -216,8 +243,7 @@ jobs:
       - name: Nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixos-20.09.tar.gz"
-          # nix_path: ${{ matrix.nix_path }}
+          nix_path: ${{ matrix.nix_path }}
       - uses: cachix/cachix-action@v8
         with:
           name: nixops-digitalocean
