--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ include = ["nixops_digitalocean/nix/*.nix"]
 [tool.poetry.dependencies]
 python = "^3.7"
 python-digitalocean = "^1.15.0"
-nixops = { git = "https://github.com/NixOS/nixops.git" }
 prettytable = "0.7.2"
 pluggy = "^0.13.1"
 # for nixops ;_;
@@ -22,6 +21,7 @@ jsonpickle = "1.4.1"
 typing-extensions = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
+nixops = { git = "https://github.com/NixOS/nixops.git", branch = "master" }
 mypy = "^0.770"
 black = "^19.10b0"
 nose = "^1.3.7"
