--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,9 @@ include = ["nixops_digitalocean/nix/*.nix"]
 [tool.poetry.dependencies]
 python = "^3.7"
 python-digitalocean = "^1.15.0"
-prettytable = "0.7.2"
-pluggy = "^0.13.1"
-# for nixops ;_;
-typeguard = "2.7.1"
 PrettyTable = "0.7.2"
-jsonpickle = "1.4.1"
+pluggy = "^0.13.1"
+typeguard = "2.7.1"
 typing-extensions = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
@@ -27,9 +24,9 @@ black = "^19.10b0"
 nose = "^1.3.7"
 coverage = "^5.2.1"
 flake8 = "^3.8.1"
-# For mypy txt report
 lxml = "^4.5.0"
-
+# 1.4.2 is broken
+jsonpickle = "1.4.1"
 # docs
 livereload = "^2.6.1"
 sphinx = "^3.3.1"
